syntax = "proto3";

package proto;

import "users.proto";
import "files.proto";
import "notes.proto";

message Empty {}
message UserId {
    string userId = 1;
}

service UsersService {
    rpc Auth(AuthRequest) returns (User) {}
    rpc GetUser(UserId) returns (User) {}
}

service UtilsService {
    rpc GetFiles(TargetId) returns (stream File) {}
    rpc CreateFile(File) returns (File) {}
    rpc DeleteFile(FileId) returns (File) {}
}

service NotesService {
    rpc GetNotes(UserId) returns (stream Note) {}
    rpc CreateNote(Note) returns (Note) {}
    rpc DeleteNote(NoteId) returns (Note) {}
}

