// Original file: utils.proto


export interface Email {
  'id'?: (string);
  'created'?: (string);
  'updated'?: (string);
  'deleted'?: (string);
  'targetId'?: (string);
  'emailTo'?: (string);
  'emailFrom'?: (string);
  'emailFromName'?: (string);
  'emailSubject'?: (string);
  'emailBody'?: (string);
}

export interface Email__Output {
  'id': (string);
  'created': (string);
  'updated': (string);
  'deleted': (string);
  'targetId': (string);
  'emailTo': (string);
  'emailFrom': (string);
  'emailFromName': (string);
  'emailSubject': (string);
  'emailBody': (string);
}
